reimplements onboarding screen and adapter

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="mindfullness_description_2">It is a way of living your life, its basic concepts are awareness, openess and presence in the here and now</string>
     <string name="meditation">Meditation</string>
     <string name="mindfullness_description_3">On the other hand, meditation is a technique used by many(including the mindfulness school of thought) to achieve an elevated state of mind</string>
+    <string name="get_started">Get started</string>
 </resources>
