--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,5 @@
     <string name="course">Course</string>
     <string name="sample_duration">3-10 min</string>
     <string name="learn_fundamentals">Learn the fundamentals of meditation</string>
+    <string name="maybe_later">Maybe later</string>
 </resources>
