completes home fragment design

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,4 +41,6 @@
     <string name="daily_exercises">Daily exercises</string>
     <string name="morning_coffee">Morning Coffee</string>
     <string name="sample_description">learn the fundamentals of \nmeditation</string>
+    <string name="challenging_times">For challenging times</string>
+    <string name="memotional_care">Emotional care for processing world tragedies and injustices</string>
 </resources>
