--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,4 +43,12 @@
     <string name="sample_description">learn the fundamentals of \nmeditation</string>
     <string name="challenging_times">For challenging times</string>
     <string name="memotional_care">Emotional care for processing world tragedies and injustices</string>
+    <string name="recommended">Recommended</string>
+    <string name="all">All</string>
+    <string name="relax">Relax</string>
+    <string name="sleep">Sleep</string>
+    <string name="focus">Focus</string>
+    <string name="music">Music</string>
+    <string name="kids">Kids</string>
+    <string name="quick_n_easy">Quick and easy</string>
 </resources>
