--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,4 +51,5 @@
     <string name="music">Music</string>
     <string name="kids">Kids</string>
     <string name="quick_n_easy">Quick and easy</string>
+    <string name="searchbar_hint">Search</string>
 </resources>
