--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,4 +62,5 @@
     <string name="privacy_policy">Privacy Policy</string>
     <string name="faq">FAQs</string>
     <string name="log_out"><![CDATA[Log Out.]]></string>
+    <string name="become_member">Become a member!</string>
 </resources>
